@@ -4,7 +4,6 @@ Version: 1.99.5
 Date: 2012-05-04
 Author: L. Goff, C. Trapnell, D. Kelley
 Description: Allows for persistent storage, access, exploration, and manipulation of Cufflinks high-throughput sequencing data.  In addition, provides numerous plotting functions for commonly used visualizations.
-Suggests: 
 Imports: methods, plyr
 Depends: R (>= 2.7.0), RSQLite, ggplot2, reshape2, fastcluster, rtracklayer, Gviz
 Suggests: cluster, plyr
