@@ -14,7 +14,6 @@
 \alias{makeGeneRegionTrack,CuffGene-method}
 \alias{genePlot}
 \alias{genePlot,CuffGene-method}
-\alias{features,CuffGene-method}
 
 \title{Class "CuffGene"}
 \description{
