@@ -1,5 +1,6 @@
 \name{features}
 \alias{features}
+\alias{features,CuffGene-method}
 %- Also NEED an '\alias' for EACH other topic documented here.
 \title{
 Features
